[gd_scene load_steps=16 format=1]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Levels/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/Ground.png" type="Texture" id=3]
[ext_resource path="res://Levels/shop_area.tscn" type="PackedScene" id=4]

[sub_resource type="CanvasItemShader" id=1]

_code = { "fragment":"", "fragment_ofs":0, "light":"", "light_ofs":0, "vertex":"", "vertex_ofs":0 }

[sub_resource type="CanvasItemMaterial" id=2]

shader/shader = SubResource( 1 )
shader/shading_mode = 0

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( -623.245, 374.036, -567.88, -310.846, -565.829, 337.126 )

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( 613.234, 367.884, -623.245, 374.036, -565.829, 337.126, 582.476, 337.126 )

[sub_resource type="ConvexPolygonShape2D" id=5]

custom_solver_bias = 0.0
points = Vector2Array( 639.891, -341.605, 613.234, 367.884, 582.476, 337.126, 582.476, -316.998 )

[sub_resource type="ConvexPolygonShape2D" id=6]

custom_solver_bias = 0.0
points = Vector2Array( -615.042, -337.504, 639.891, -341.605, 582.476, -316.998, -623.245, -312.897 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 24.7681, 30.9798 )

[sub_resource type="ConvexPolygonShape2D" id=8]

custom_solver_bias = 0.0
points = Vector2Array( -633.03, 374.178, -567.88, -310.846, -565.829, 337.126 )

[sub_resource type="ConvexPolygonShape2D" id=9]

custom_solver_bias = 0.0
points = Vector2Array( 613.234, 367.884, -633.03, 374.178, -565.829, 337.126, 582.476, 337.126 )

[sub_resource type="ConvexPolygonShape2D" id=10]

custom_solver_bias = 0.0
points = Vector2Array( 639.891, -341.605, 613.234, 367.884, 582.476, 337.126, 582.476, -316.998 )

[sub_resource type="ConvexPolygonShape2D" id=11]

custom_solver_bias = 0.0
points = Vector2Array( -615.042, -337.504, 639.891, -341.605, 582.476, -316.998, -623.245, -312.897 )

[node name="world" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Player1" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 400, 300 )
player_num = 1
color = Color( 0.243137, 0.580392, 0.831373, 1 )

[node name="Player2" parent="." instance=ExtResource( 2 )]

material/material = SubResource( 2 )
transform/pos = Vector2( 930, 300 )
player_num = 2
color = Color( 0.0926971, 0.878906, 0.326103, 1 )

[node name="ground" type="StaticBody2D" parent="." groups=[ "wall" ]]

visibility/behind_parent = true
transform/pos = Vector2( 506.921, 294.999 )
transform/scale = Vector2( 0.9, 0.94 )
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1.32, 0, 0, 1.13, 183.543, 37.4907 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 4 )
shapes/1/transform = Matrix32( 1.32, 0, 0, 1.13, 183.543, 37.4907 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 5 )
shapes/2/transform = Matrix32( 1.32, 0, 0, 1.13, 183.543, 37.4907 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 6 )
shapes/3/transform = Matrix32( 1.32, 0, 0, 1.13, 183.543, 37.4907 )
shapes/3/trigger = false
collision/layers = 2
collision/mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = { "_edit_lock_":true }

[node name="Sprite" type="Sprite" parent="ground"]

visibility/behind_parent = true
transform/pos = Vector2( -568.001, -313.733 )
texture = ExtResource( 3 )
centered = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ground"]

transform/pos = Vector2( 183.543, 37.4907 )
transform/scale = Vector2( 1.32, 1.13 )
build_mode = 0
polygon = Vector2Array( -567.88, -310.846, -565.829, 337.126, 582.476, 337.126, 582.476, -316.998, -623.245, -312.897, -615.042, -337.504, 639.891, -341.605, 613.234, 367.884, -623.245, 374.036 )
shape_range = Vector2( 0, 3 )
trigger = false

[node name="solution" type="Area2D" parent="."]

transform/pos = Vector2( 1995, 1995 )
input/pickable = true
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 19.1775, 0, 0, 16.6205, 8.48787, 41.9476 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 3
__meta__ = { "_edit_group_":true }

[node name="CollisionShape2D" type="CollisionShape2D" parent="solution"]

transform/pos = Vector2( 8.48787, 41.9476 )
transform/scale = Vector2( 19.1775, 16.6205 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 0

[node name="outside" type="Area2D" parent="." groups=[ "outside" ]]

transform/pos = Vector2( 679.125, 339.746 )
transform/scale = Vector2( 2.8, 15 )
input/pickable = true
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 0.523688, 0, 0, 0.08984, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 9 )
shapes/1/transform = Matrix32( 0.523688, 0, 0, 0.08984, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 10 )
shapes/2/transform = Matrix32( 0.523688, 0, 0, 0.08984, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 11 )
shapes/3/transform = Matrix32( 0.523688, 0, 0, 0.08984, 0, 0 )
shapes/3/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = { "_edit_group_":true }

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="outside"]

transform/scale = Vector2( 0.523688, 0.08984 )
build_mode = 0
polygon = Vector2Array( -567.88, -310.846, -565.829, 337.126, 582.476, 337.126, 582.476, -316.998, -623.245, -312.897, -615.042, -337.504, 639.891, -341.605, 613.234, 367.884, -633.03, 374.178 )
shape_range = Vector2( 0, 3 )
trigger = false

[node name="Walls" type="Node2D" parent="."]

[node name="Shop_area" parent="." instance=ExtResource( 4 )]

visibility/visible = false
transform/pos = Vector2( 675.664, 487.637 )
transform/scale = Vector2( 4.07993, 4.07993 )


